project links updated

--- a/index.html
+++ b/index.html
@@ -23,18 +23,13 @@
         <a href="info.html" class="info navi">Information Asymmetry?</a>
         <a href="propaganda.html" class="propaganda navi">Top 3 Propaganda Techniques</a>
         <a href="whatNext.html" class="blockchain navi">What Next?</a>
-        <a href="#home-email" class="navi">Contact Me</a>
+        <a href="https://www.kate-kim.com/#projects" class="navi">Go Back To Projects</a>
     </nav>  
 
     <section class="contents"> 
       <h2 class="fade"></h2>
     </section> 
   </div>
-
-  <footer class="home">
-    <p id="home-email">Contact: example@example.co</p>
-    <p class="home-copy"><i class="far fa-copyright"></i> The Citizen</p>
-  </footer>  
 
   <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
   <script src="home.js"></script>
