--- a/info.html
+++ b/info.html
@@ -26,7 +26,7 @@
         <a href="info.html" class="info navi">Information Asymmetry?</a>
         <a href="propaganda.html" class="propaganda navi">Top 3 Propaganda Techniques</a>
         <a href="whatNext.html" class="blockchain navi">What Next?</a>
-        <a href="#email" class="navi">Contact Me</a>
+        <a href="https://www.kate-kim.com/#projects" class="navi">Go Back To Projects</a>
     </nav>
     <section class="title">
       <h2 data-aos="flip-right">What is <span>Information Asymmetry?</span></h2>
@@ -93,11 +93,6 @@
     <a href="propaganda.html" class="propaganda navi">Top 3 Propaganda Techniques</a>     
   </div>     
 
-  <footer>
-    <p id="email">Contact: example@example.co</p>
-    <p class="copyright"><i class="far fa-copyright"></i> The Citizen</p>
-    <a href="#top" class="top">Go to Top </a>    
-  </footer>
 
   <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script> 
   <script src="app.js"></script>
