--- a/propaganda.html
+++ b/propaganda.html
@@ -23,7 +23,7 @@
           <a href="info.html" class="info navi">Information Asymmetry?</a>
           <a href="propaganda.html" class="propaganda navi">Top 3 Propaganda Techniques</a>
           <a href="whatNext.html" class="blockchain navi">What Next?</a>
-          <a href="#email" class="navi">Contact Me</a>
+          <a href="https://www.kate-kim.com/#projects" class="navi">Go Back To Projects</a>
       </nav>
 
       <h1 class="heading" data-aos="fade-down"><span>Top 3</span> Propaganda techniques</h1>
@@ -93,11 +93,6 @@
     <div class="nav-down">     
       <a href="whatNext.html" class="blockchain navi">What Next?</a>      
     </div>      
-
-    <footer>      
-      <p id="email">Contact: email here</p>
-      <p class="copyright"><i class="far fa-copyright"></i> @The Citizen</p>
-    </footer>
 
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script src="app.js"></script>
