--- a/whatNext.html
+++ b/whatNext.html
@@ -26,7 +26,7 @@
         <a href="info.html" class="info navi">Information Asymmetry?</a>
         <a href="propaganda.html" class="propaganda navi">5 Propaganda Techniques</a>
         <a href="whatNext.html" class="blockchain navi">What Next?</a>
-        <a href="#email" class="navi">Contact Me</a>
+        <a href="https://www.kate-kim.com/#projects" class="navi">Go Back To Projects</a>
     </nav>
 
     <h1 class="dist" data-aos="fade-down"><span>Re-distribution</span> of Control & Power</h1>
@@ -77,11 +77,7 @@
     <a href="info.html" class="info navi">Information Asymmetry?</a>     
   </div>   
  
-  <footer>
-    <p id="email">Contact: example@example.co</p>
-    <p class="copyright"><i class="far fa-copyright"></i> The Citizen</p>
-    <a href="#top" class="top">Go to Top </a>
-  </footer>
+
   <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script> 
   <script src="app.js"></script>
 </body>
