web links updated

--- a/info.html
+++ b/info.html
@@ -26,7 +26,7 @@
         <a href="info.html" class="info navi">Information Asymmetry?</a>
         <a href="propaganda.html" class="propaganda navi">Top 3 Propaganda Techniques</a>
         <a href="whatNext.html" class="blockchain navi">What Next?</a>
-        <a href="https://www.kate-kim.com/#projects" class="navi">Go Back To Projects</a>
+        <a href="https://www.kate-k.com/#portfolio" class="navi">Go Back To Projects</a>
     </nav>
     <section class="title">
       <h2 data-aos="flip-right">What is <span>Information Asymmetry?</span></h2>
