--- a/propaganda.html
+++ b/propaganda.html
@@ -23,7 +23,7 @@
           <a href="info.html" class="info navi">Information Asymmetry?</a>
           <a href="propaganda.html" class="propaganda navi">Top 3 Propaganda Techniques</a>
           <a href="whatNext.html" class="blockchain navi">What Next?</a>
-          <a href="https://www.kate-kim.com/#projects" class="navi">Go Back To Projects</a>
+          <a href="https://www.kate-k.com/#portfolio" class="navi">Go Back To Projects</a>
       </nav>
 
       <h1 class="heading" data-aos="fade-down"><span>Top 3</span> Propaganda techniques</h1>
