--- a/whatNext.html
+++ b/whatNext.html
@@ -26,7 +26,7 @@
         <a href="info.html" class="info navi">Information Asymmetry?</a>
         <a href="propaganda.html" class="propaganda navi">5 Propaganda Techniques</a>
         <a href="whatNext.html" class="blockchain navi">What Next?</a>
-        <a href="https://www.kate-kim.com/#projects" class="navi">Go Back To Projects</a>
+        <a href="https://www.kate-k.com/#portfolio" class="navi">Go Back To Projects</a>
     </nav>
 
     <h1 class="dist" data-aos="fade-down"><span>Re-distribution</span> of Control & Power</h1>
