--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="pointer">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48.69 41.5"><defs><style>.cls-1{fill:#256488;stroke:#231f20;stroke-miterlimit:10;stroke-width:0.49px;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><polygon class="cls-1" points="0.43 0.25 48.26 0.25 24.35 41.01 24.35 41.01 0.43 0.25"/></g></g></svg>       
     </div>
-    <nav id="nav">     
+    <nav id="nav" class="hide">     
         <a href="index.html" class="home navi">Home</a>
         <a href="info.html" class="info navi">Information Asymmetry?</a>
         <a href="propaganda.html" class="propaganda navi">Top 3 Propaganda Techniques</a>
